feature: add docker

--- a/characters_API/appsettings.json
+++ b/characters_API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CharacterConnection": "Server=postgres;Database=character-db;Username=postgres;Password=root"
+  }
 }
