--- a/characters_API/appsettings.json
+++ b/characters_API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CharacterConnection": "Server=postgres;Database=character-db;Username=postgres;Password=root"
+    "CharacterConnection": "Host=localhost;Port=5433;Database=character-db;Username=postgres;Password=Bemol@99"
   }
 }
